# cdocx

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  AI_PROMPT.txt  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  CONTRIBUTING.md  Doxyfile  PROJECT_ANALYSIS.md  README.md  SECURITY.md  STYLE.md  TestWord.docx  _2home_2runner_2work_2cdocx_2cdocx_2include_2cdocx_2constants_8h-example.html  advanced_8h.html  advanced_8h.js  advanced_8h_source.html  annotated.html  annotated_dup.js  base_8h.html  base_8h.js  base_8h_source.html  base__content_8cpp.html  base__content_8cpp.js  base__content_8cpp_source.html  body_8cpp.html  body_8cpp_source.html  body_8h.html  body_8h.js  body_8h_source.html  bookmark_8cpp.html  bookmark_8cpp_source.html  bookmark_8h.html  bookmark_8h.js  bookmark_8h_source.html  bookmark__inserter_8cpp.html  (+806 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
cmake/: cdocx-config.cmake.in  cmake_uninstall.cmake.in
comparison/: COMPARISON_REPORT.md  cdocx_empty.cpp  cdocx_equivalent  cdocx_equivalent.cpp  cdocx_equivalent.docx  compare_analysis.py  minimal_test  minimal_test.cpp  python_docx_reference.py  run_comparison.py  test_list.docx  test_numbering
docs/: API示例.md  ASPOSE_COMPARISON_AND_ROADMAP.md  ASPOSE_DESIGN_ANALYSIS_AND_ENHANCEMENTS.md  CDOCX_ENHANCEMENT_PLAN.md  CDOCX_OPTIMIZATION_PLAN.md  CDocx_Architecture_Redesign.md  CDocx_Aspose_Detailed_Comparison.md  CDocx_Enhancement_Roadmap.md  CDocx_v2_API_Examples.md  CDocx_v2_Implementation_Plan.md  CDocx_v2_Summary.md  CDocx_vs_Aspose_Words_Analysis.md  CLEANUP_SUMMARY.md  CODE_QUALITY.md  CODE_REFACTORING_PLAN.md  ENHANCEMENT_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  INDEX.md  INSTALL.md  MINIDOCX_ANALYSIS_AND_OPTIMIZATION.md  OPTIMIZATION_UPGRADE_PLAN.md  README.md  REFACTORING_SUMMARY.md  V0.3.0_EXAMPLES_AND_TESTS.md  V0.3.0_UPDATE_SUMMARY.md  V0.4.0_ENHANCEMENT_SUMMARY.md  V0.5.0_IMPLEMENTATION_COMPLETE.md  V0.5.0_IMPLEMENTATION_SUMMARY.md  conf.py  (+5 more)
examples/: CMakeLists.txt  aspose_style_example.cpp  create_sample_docs.cpp  example_utils.h
examples/01_basic_read/: CMakeLists.txt  main.cpp  main_test.cpp
examples/01_basic_read/data/: 01_basic_read_sample.docx
examples/02_basic_create/: CMakeLists.txt  main.cpp
examples/03_template_basic/: CMakeLists.txt  main.cpp
examples/03_template_basic/data/: 03_template_basic_sample.docx
examples/04_template_advanced/: CMakeLists.txt  main.cpp
examples/05_document_insert/: CMakeLists.txt  main.cpp
examples/05_document_insert/data/: 05_insert_main_sample.docx  05_insert_template_sample.docx
examples/06_xml_parts/: CMakeLists.txt  main.cpp
examples/06_xml_parts/data/: 06_xml_parts_sample.docx
examples/07_media_management/: CMakeLists.txt  main.cpp
examples/08_create_empty/: 08_created_document.docx  CMakeLists.txt  main.cpp
examples/09_text_formatting/: CMakeLists.txt  main.cpp
examples/10_advanced_crud/: CMakeLists.txt  main.cpp
examples/10_edit_document/: CMakeLists.txt  README.md  main.cpp
examples/11_advanced_crud/: CMakeLists.txt  main.cpp
examples/11_bookmark_replacement/: CMakeLists.txt  main.cpp
examples/12_caption_generation/: main.cpp
examples/13_caption_generation/: CMakeLists.txt
examples/13_enhanced_properties/: main.cpp
examples/13_section_and_list/: main.cpp
examples/14_table_merge/: main.cpp
examples/15_document_search/: main.cpp
examples/16_document_builder/: main.cpp
examples/16_table_merge/: main.cpp
examples/17_document_search/: main.cpp
examples/17_style_collection/: main.cpp
examples/18_document_builder/: main.cpp
examples/18_new_features/: main.cpp
examples/19_mail_merge/: main.cpp
examples/20_comments/: main.cpp
examples/20_new_features/: main.cpp
examples/21_template_engine/: CMakeLists.txt  debug_author  debug_author.cpp  debug_bookmark.cpp  debug_bookmark_direct  debug_bookmark_direct.cpp  debug_phases  debug_phases.cpp  debug_track.cpp  main.cpp  main_2.cpp
examples/21_template_engine/data/: template_engine.docx  template_engine_2.docx
examples/22_watermark/: main.cpp
examples/23_template_engine/: CMakeLists.txt  main_2.cpp
examples/23_template_engine/data/: template_engine.docx.bak  test_bookmark.docx.py
examples/25_bookmark_inserter/: main.cpp
examples/26_footnote_collection/: main.cpp
examples/27_field_switches/: main.cpp
examples/28_build_from_scratch/: main.cpp
examples/29_geological_report/: main.cpp
examples/data/: AppendixFigure.docx  my_test.docx
examples/test_dom_sync/: main.cpp
test/: CMakeLists.txt  basic_tests.cpp  iterator_tests.cpp  test_helpers.h
test/01_basic/: 01_basic_tests.cpp  CMakeLists.txt
test/02_iterator/: 02_iterator_tests.cpp  CMakeLists.txt
test/03_template/: 03_template_tests.cpp  CMakeLists.txt
test/03_template/data/: template.docx
test/04_xml_parts/: 04_xml_parts_tests.cpp  CMakeLists.txt
test/05_complete_structure/: 05_complete_structure_test.cpp  CMakeLists.txt
test/06_create_empty/: 06_create_empty_tests.cpp  CMakeLists.txt
test/07_text_formatting/: 07_text_formatting_tests.cpp  CMakeLists.txt
test/08_bookmark_replacement/: 08_bookmark_replacement_tests.cpp  CMakeLists.txt
test/09_section_and_list/: 09_section_and_list_tests.cpp  CMakeLists.txt
test/10_dom_sync/: 10_dom_sync_tests.cpp
test/11_table_merge/: 11_table_merge_tests.cpp
test/12_document_search/: 12_document_search_tests.cpp
test/13_document_builder/: 13_document_builder_tests.cpp
test/14_style_collection/: 14_style_collection_tests.cpp
test/15_mail_merge/: 15_mail_merge_tests.cpp
test/16_comment_collection/: 16_comment_collection_tests.cpp
test/17_footnote_collection/: 17_footnote_collection_tests.cpp
test/18_field_switches/: 18_field_switches_tests.cpp
test/19_template_engine/: 19_template_engine_tests.cpp
test/install_test/: CMakeLists.txt
test/install_test/src/: main.cpp
test/utils/: CMakeLists.txt  debug_doc_load.cpp  debug_zip_read.cpp  debug_zip_read2.cpp
(+2815 files in other folders)
